<?xml version="1.0" encoding="utf-8"?>
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<Button
    android:id="@+id/b"
    android:onClick="process"
    android:text="@string/plusMinus"
    android:layout_alignParentBottom="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <Button
        android:layout_weight="1"
        android:id="@+id/b2"
        android:text="@string/_0"
        android:onClick="process2"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b3"
        android:text="@string/dot"
        android:onClick="process3"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/b2"
         />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b4"
        android:text="@string/equal"
        android:onClick="equals"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/b3"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b5"
        android:text="@string/_1"
        android:onClick="process5"
        android:layout_above="@id/b"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b6"
        android:text="@string/_2"
        android:onClick="process6"
        android:layout_above="@id/b2"
        android:layout_toRightOf="@id/b5"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b7"
        android:text="@string/_3"
        android:onClick="process7"
        android:layout_above="@id/b3"
        android:layout_toRightOf="@id/b6"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b8"
        android:text="@string/plus"
        android:onClick="process8"
        android:layout_above="@id/b4"
        android:layout_toRightOf="@id/b7"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b9"
        android:text="@string/_4"
        android:onClick="process9"
        android:layout_above="@id/b5"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b10"
        android:text="@string/_5"
        android:onClick="process10"
        android:layout_above="@id/b5"
        android:layout_toRightOf="@id/b9"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b11"
        android:text="@string/_6"
        android:onClick="process11"
        android:layout_above="@id/b7"
        android:layout_toRightOf="@id/b10"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b12"
        android:text="@string/minus"
        android:onClick="process12"
        android:layout_above="@id/b8"
        android:layout_toRightOf="@id/b11"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b13"
        android:text="@string/_7"
        android:onClick="process13"
        android:layout_above="@id/b9"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b14"
        android:text="@string/_8"
        android:onClick="process14"
        android:layout_above="@id/b10"
        android:layout_toRightOf="@id/b13"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b15"
        android:text="@string/_9"
        android:onClick="process15"
        android:layout_above="@id/b11"
        android:layout_toRightOf="@id/b14"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b16"
        android:text="@string/Multiply"
        android:onClick="process16"
        android:layout_above="@id/b12"
        android:layout_toRightOf="@id/b15"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b17"
        android:text="@string/ClearSec"
        android:onClick="process17"
        android:layout_above="@id/b13"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b18"
        android:text="@string/braces"
        android:onClick="process18"
        android:layout_above="@id/b14"
        android:layout_toRightOf="@id/b17"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b19"
        android:text="@string/percentage"
        android:onClick="process19"
        android:layout_above="@id/b15"
        android:layout_toRightOf="@id/b18"
        />
    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b20"
        android:text="@string/divide"
        android:onClick="process20"
        android:layout_above="@id/b16"
        android:layout_toRightOf="@id/b19"
        />


    <TextView

        android:id="@+id/text"
        android:textSize="50dp"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>